--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Menu</title>
+    <style rel="stylesheet" href="main.css"></style>
 </head>
 <body>
-        <img src="placeholder.png">
+    <img src="placeholder.png">
+    
+    <a href="foliarz.html">Foliarz</a>
+    
+    <script src="script.js"></script>
 </body>
 </html>
