Top Secret Link added

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <style rel="stylesheet" href="main.css"></style>
 </head>
 <body>
-    <img src="placeholder.png">
-    
-    <a href="foliarz.html">Foliarz</a>
+    <a href="foliarz.html"><img src="placeholder.png"></a>
     
     <script src="script.js"></script>
 </body>
