--- a/foliarz.html
+++ b/foliarz.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foliarz Podział Sieci</title>
+    <link rel="stylesheet" href="styleFoliage.css">
 </head>
 <body>
-    <div class="podział podsieci">
-        <fieldset>
+    <div class="podzial">
             <legend>Podział sieci</legend>
-            
+            <input id="adres" onkeyup="spacjowanie()"><br>
             <select id="maska">
                 <option value=0>/0 aka 0.0.0.0                 </option>
                 <option value=1>/1 aka 128.0.0.0               </option>
@@ -48,7 +48,6 @@
             </select><!-- (domyślnie 24 bity aka 255.255.255.0 aka 0xFFFFFF00) -->
             <br>
             <input type="button" value="Oblicz" onclick=siecing()"><br>
-        </fieldset>
     </div>
     <script src="Foliage.js"></script>
 </body>
