--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Menu</title>
-    <style rel="stylesheet" href="main.css"></style>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <a href="foliarz.html"><img src="placeholder.png"></a>
