--- a/foliarz.html
+++ b/foliarz.html
@@ -10,7 +10,7 @@
 <body>
     <div class="podzial">
             <legend>Podział sieci</legend>
-            <input id="adres" onkeyup="spacjowanie()"><br>
+            <input id="adres" onkeyup="spacjowanie()" maxlength="15"><br>
             <select id="maska">
                 <option value=0>/0 aka 0.0.0.0                 </option>
                 <option value=1>/1 aka 128.0.0.0               </option>
