--- a/foliarz.html
+++ b/foliarz.html
@@ -47,7 +47,7 @@
                 <option value=32>/32 aka 255.255.255.255       </option>
             </select><!-- (domyślnie 24 bity aka 255.255.255.0 aka 0xFFFFFF00) -->
             <br>
-            <input type="button" value="Oblicz" onclick=siecing()"><br>
+            <input type="button" id="Oblicz" value="Oblicz" onclick=siecing()"><br>
     </div>
     <script src="Foliage.js"></script>
 </body>
