Files restructured + layout
- Nav bar added
- File structure improved
- New files added
- Some misc changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <a href="foliarz.html"><img src="placeholder.png"></a>
+    <div class="menu">
+        <a class="active" href="index.html">Home</a>
+        <a href="./sieci/foliarz.html">Foliarz</a>
+        <a href="./matma/matma.html">Matma</a>
+        <a href="./about/about.html">About</a>
+    </div>
+    <div class="content">
+        <img src="placeholder.png">
+    </div>
     
     <script src="script.js"></script>
 </body>
