--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </div>
     <div class="content">
         <img src="placeholder.png">
+        <input type="text" id="adres" placeholder="Adres" onkeydown="spacjowanie(); kropkowanie()" maxlength="15" size="11"><br>
     </div>
     
     <script src="script.js"></script>
