Auto-dotting working
Co-Authored-By: Hardkore5555 <56128365+Hardkore5555@users.noreply.github.com>

--- a/sieci/foliarz.html
+++ b/sieci/foliarz.html
@@ -55,7 +55,11 @@
             </select><!-- (domyślnie 24 bity aka 255.255.255.0 aka 0xFFFFFF00) -->
             <br>
             <input type="button" id="Oblicz" value="Oblicz" onclick="Oblicz()"><br>
+
             <p id="licznik"></p>
+            <p id="licznik2"></p>
+            <p id="liczba"></p>
+
             <div class='result'>
                 <span class=label>IP Address :</span>
                 <span class=value id=resIP></span>
