--- a/sieci/foliarz.html
+++ b/sieci/foliarz.html
@@ -56,6 +56,8 @@
             <br>
             <input type="button" id="Oblicz" value="Oblicz" onclick="Oblicz()"><br>
 
+            <!-- <p id="licznik"></p> -->
+
             <div class='result'>
                 <span class=label>IP Address :</span>
                 <span class=value id=resIP></span>
