--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="menu">
-        <a class="active" href="index.html">Home</a>
-        <a href="./sieci/foliarz.html">Foliarz</a>
-        <a href="./matma/matma.html">Matma</a>
-        <a href="./about/about.html">About</a>
+        <a class="active" href="./">Home</a>
+        <a href="/sieci/">Foliarz</a>
+        <a href="/matma/">Matma</a>
+        <a href="/about/">About</a>
     </div>
     <div class="content">
         <img src="placeholder.png">
