--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Menu</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+    <button onclick="DarkTheme()"></button>
     <div class="menu">
         <a class="active" href="./">Home</a>
         <a href="/sieci/">Foliarz</a>
@@ -16,7 +17,5 @@
     <div class="content">
         <img src="placeholder.png">
     </div>
-    
-    <script src="script.js"></script>
 </body>
 </html>
