--- a/matma/index.html
+++ b/matma/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matematyka</title>
-    <link rel="stylesheet" href="mathstyle.css">
+    <link rel="stylesheet" href="../css/math.css">
 </head>
 <body>
     <div class="menu">
-        <a href="../index.html">Home</a>
-        <a href="../sieci/foliarz.html">Foliarz</a>
-        <a href="matma.html" class="active">Matma</a>
-        <a href="../about/about.html">About</a>
+        <a href="../">Home</a>
+        <a href="../sieci/">Foliarz</a>
+        <a href="/" class="active">Matma</a>
+        <a href="../about/">About</a>
     </div>
     <div class="content">
         <h1>i looooove math</h1>
