--- a/sieci/index.html
+++ b/sieci/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foliarz Podział Sieci</title>
-    <link rel="stylesheet" href="styleFoliage.css">
+    <link rel="stylesheet" href="../css/foliage.css">
 </head>
 <body>
     <div class="menu">
