--- a/sieci/index.html
+++ b/sieci/index.html
@@ -17,7 +17,7 @@
 
     <div class="podzial">
             <h1>Podział sieci</h1>
-            <input type="text" id="adres" placeholder="Adres" onkeydown="spacjowanie(); kropkowanie()" maxlength="15" size="11"><br>
+            <input type="text" id="adres" placeholder="Adres" onkeydown="kropkowanie()" maxlength="15" size="11"><br>
             <select name="maska" id="maska">
                 <option value=0>/0 aka 0.0.0.0                 </option>
                 <option value=1>/1 aka 128.0.0.0               </option>
